# PSSR2

./: .gitignore  LICENSE  NOTICE  README.md  README.rst  _pssr.py  approx_crappifier.ipynb  demo.py  predict.ipynb  pssr.py  pyproject.toml  pytest.ini  train.ipynb  train_crappifier.ipynb
.github/workflows/: static.yml
.napari-hub/: DESCRIPTION.md
docs/source/: conf.py  index.rst
docs/source/guide/: dataloading.rst  napari.rst  principles.rst  start.rst  workflow.rst
docs/source/reference/: CLI.rst  api.rst  crappifiers.rst  data.rst  models.rst  predict.rst  train.rst  util.rst
docs/source/reference/crappifiers/: AdditiveGaussian.rst  MultiCrappifier.rst  Poisson.rst  SaltPepper.rst
docs/source/reference/data/: ImageDataset.rst  preprocess_dataset.rst
docs/source/reference/loss/: psnr_metric.rst
docs/source/reference/models/: RDResUNet.rst  SwinIR.rst
docs/source/reference/predict/: normalize_preds.rst  predict_images.rst  test_metrics.rst
docs/source/reference/train/: train_crappifier.rst
docs/source/reference/util/: SSIMLoss.rst  normalize_preds.rst  pixel_metric.rst  reassemble_sheets.rst
notebooks/: approx_crappifier.ipynb  predict.ipynb  train.ipynb  train_crappifier.ipynb
pssr/: __init__.py  __main__.py  crappifiers.py  data.py  loss.py  metrics.py  predict.py  train.py  util.py
pssr/models/: __init__.py  _blocks.py  _rdnet.py  crappifier.py  rdresunet.py  resunet.py  resuneta.py  swinir.py
pssr/napari/: __init__.py  _util.py  napari.yaml  widgets.py
tests/: _util.py  conftest.py  test_crappifiers.py  test_data.py  test_loss.py  test_models.py  test_predict.py  test_train.py  test_util.py
