[tool.poetry]
name = "pssr"
version = "1.2.0"
description = "Point-Scanning Super-Resolution"
authors = ["Hayden Stites"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ucsdmanorlab/PSSR"
documentation = "https://ucsdmanorlab.github.io/PSSR/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Documentation :: Sphinx",
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
numpy = "^1.26.4"
pillow = "^10.2.0"
czifile = "^2019.7.2"
tifffile = "^2024.4.24"
scikit-image = ">=0.18.0"
scikit-optimize = "^0.9.0"
tqdm = "^4.66.2"
pytorch-msssim = "^1.0.0"
psutil = "^5.9.8"

timm = {version = "^0.9.12", optional = true}

[tool.poetry.extras]
models = ["timm"]

[tool.poetry.scripts]
pssr = "pssr.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
